[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Images/Access01_02/vector-graphics-portable-network-graphics-computer-icons-clip-art-magnifying-glass-png-favpng-uuSX3pTW6uenQcdfUUPDhMESR.png" type="Texture" id=1]
[ext_resource path="res://assets/Images/Access01_02/mapa-satélite-de-brasília-brasil-ruas-da-cidade-128618769.png" type="Texture" id=2]
[ext_resource path="res://assets/Fonts/type-writter/JMH Typewriter.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/FirstAccess/Access02.gd" type="Script" id=4]
[ext_resource path="res://assets/Images/Access01_02/Daco_4140150.png" type="Texture" id=5]
[ext_resource path="res://assets/audio/soundtrack/Loop2-Atualizado.mp3" type="AudioStream" id=7]
[ext_resource path="res://scenes/AuxScenes/AudioController.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/AuxScenes/Button.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Access02" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MapaSatelite" type="Sprite" parent="Background"]
position = Vector2( 536, 304 )
scale = Vector2( 0.779788, 0.779788 )
texture = ExtResource( 2 )

[node name="FolhaDeTutorial" type="Sprite" parent="."]
position = Vector2( 504, 312 )
texture = ExtResource( 5 )

[node name="TutorialText" type="Label" parent="."]
margin_left = 262.0
margin_top = 179.0
margin_right = 814.0
margin_bottom = 416.0
rect_rotation = -1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_constants/line_spacing = 6
custom_fonts/font = SubResource( 1 )
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="WritingTime" type="Timer" parent="."]
wait_time = 0.05

[node name="vector-graphics-portable-network-graphics-computer-icons-clip-art-magnifying-glass-png-favpng-uuSX3pTW6uenQcdfUUPDhMESR" type="Sprite" parent="WritingTime"]
visible = false
position = Vector2( 856, 296 )
scale = Vector2( 0.183537, 0.183537 )
texture = ExtResource( 1 )

[node name="Mapa" parent="." instance=ExtResource( 9 )]
margin_left = 704.0
margin_top = 432.0
margin_right = 840.0
margin_bottom = 476.0
text = "Continuar"

[node name="MainMusic" parent="." instance=ExtResource( 8 )]
stream = ExtResource( 7 )

[node name="FinishWriting" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="WritingTime" to="." method="_on_WritingTime_timeout"]
[connection signal="button_down" from="Mapa" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Mapa" to="." method="_on_Mapa_button_down"]
[connection signal="timeout" from="FinishWriting" to="." method="_on_FinishWriting_timeout"]
